--- a/.env.example
+++ b/.env.example
@@ -51,11 +51,20 @@ VALYU_CLIENT_SECRET=your-oauth-client-secret
 VALYU_API_KEY=valyu_your_api_key_here
 
 # ------------------------------------------------------------------------------
-# OPENAI API (REQUIRED)
+# OPENAI API (OPTIONAL - fallback if GLM not configured)
 # ------------------------------------------------------------------------------
 # Used for AI chat responses and natural language understanding
 # Get your API key at: https://platform.openai.com
 OPENAI_API_KEY=sk-your_openai_api_key_here
+
+# ------------------------------------------------------------------------------
+# ZHIPU AI GLM (RECOMMENDED - Primary LLM Provider)
+# ------------------------------------------------------------------------------
+# Zhipu AI's GLM models (GLM-4, GLM-4-Plus, etc.)
+# Get your API key at: https://open.bigmodel.cn
+GLM_API_KEY=your_glm_api_key_here
+GLM_BASE_URL=https://api.z.ai/api/coding/paas/v4
+GLM_MODEL=glm-4-plus
 
 # ------------------------------------------------------------------------------
 # DAYTONA API (REQUIRED)
