Revert "chore: remove Valyu integration, enterprise features, and Resend"
This reverts commit 640568e4a51ef382a99a699a311fd3d7d6bdd06d.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ==============================================================================
-# FINANCEBOT - Environment Variables Template
+# FINANCE - Environment Variables Template
 # ==============================================================================
 # Copy this file to .env.local and fill in your actual values
 # DO NOT commit .env.local to version control
@@ -8,16 +8,47 @@
 # ------------------------------------------------------------------------------
 # APP CONFIGURATION
 # ------------------------------------------------------------------------------
+# Set to 'development' or 'production'
+# development = no auth, local SQLite, unlimited queries, Ollama/LM Studio support
+# production = full auth, Supabase, billing via Valyu credits
 NEXT_PUBLIC_APP_MODE=development
+
+# Your app URL (use http://localhost:3000 for local development)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ------------------------------------------------------------------------------
-# ZHIPU AI GLM (PRIMARY LLM Provider)
+# VALYU OAUTH (REQUIRED FOR PRODUCTION)
 # ------------------------------------------------------------------------------
-# Zhipu AI's GLM models (GLM-4, GLM-4-Plus, etc.)
-GLM_API_KEY=your_glm_api_key_here
-GLM_BASE_URL=https://api.z.ai/api/coding/paas/v4
-GLM_MODEL=glm-4-plus
+# Sign in with Valyu - OAuth 2.1 credentials
+# Get your OAuth credentials at: https://platform.valyu.ai → Settings → OAuth Apps
+#
+# Only 4 environment variables are needed for Valyu OAuth:
+# 1. NEXT_PUBLIC_VALYU_SUPABASE_URL - for OAuth endpoints (/auth/v1/oauth/*)
+# 2. NEXT_PUBLIC_VALYU_CLIENT_ID - OAuth client identifier
+# 3. VALYU_CLIENT_SECRET - OAuth client secret (server-side only)
+# 4. VALYU_APP_URL - for platform endpoints (/api/oauth/*)
+#
+# NOTE: No anon key is needed - OAuth uses client_id/client_secret
+
+# Valyu Platform's Supabase URL (for OAuth endpoints: /auth/v1/oauth/authorize, /auth/v1/oauth/token)
+NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co
+
+# Valyu Platform URL (for platform endpoints: /api/oauth/userinfo, /api/oauth/proxy)
+VALYU_APP_URL=https://platform.valyu.ai
+
+# OAuth Client ID (safe for client-side)
+NEXT_PUBLIC_VALYU_CLIENT_ID=your-oauth-client-id
+
+# OAuth Client Secret (SERVER ONLY - never expose client-side)
+VALYU_CLIENT_SECRET=your-oauth-client-secret
+
+# ------------------------------------------------------------------------------
+# VALYU API (OPTIONAL - Development fallback)
+# ------------------------------------------------------------------------------
+# Server-side API key as fallback when no OAuth token is present
+# Only used in development mode or for anonymous users
+# Get your API key at: https://platform.valyu.ai
+VALYU_API_KEY=valyu_your_api_key_here
 
 # ------------------------------------------------------------------------------
 # OPENAI API (OPTIONAL - fallback if GLM not configured)
@@ -27,7 +58,16 @@ GLM_MODEL=glm-4-plus
 OPENAI_API_KEY=sk-your_openai_api_key_here
 
 # ------------------------------------------------------------------------------
-# DAYTONA API (REQUIRED for Python code execution)
+# ZHIPU AI GLM (RECOMMENDED - Primary LLM Provider)
+# ------------------------------------------------------------------------------
+# Zhipu AI's GLM models (GLM-4, GLM-4-Plus, etc.)
+# Get your API key at: https://open.bigmodel.cn
+GLM_API_KEY=your_glm_api_key_here
+GLM_BASE_URL=https://api.z.ai/api/coding/paas/v4
+GLM_MODEL=glm-4-plus
+
+# ------------------------------------------------------------------------------
+# DAYTONA API (REQUIRED)
 # ------------------------------------------------------------------------------
 # Used for secure Python code execution (data analysis, charts, ML models)
 # Get your API key at: https://daytona.io
@@ -36,9 +76,10 @@ DAYTONA_API_URL=https://api.daytona.io
 DAYTONA_TARGET=latest
 
 # ------------------------------------------------------------------------------
-# LOCAL LLM CONFIGURATION (OPTIONAL)
+# LOCAL LLM CONFIGURATION (OPTIONAL - Development Mode Only)
 # ------------------------------------------------------------------------------
 # Use Ollama or LM Studio for unlimited, private local AI queries
+# Only used when NEXT_PUBLIC_APP_MODE=development
 
 # Ollama Configuration (https://ollama.com)
 OLLAMA_BASE_URL=http://localhost:11434
@@ -47,18 +88,62 @@ OLLAMA_BASE_URL=http://localhost:11434
 LMSTUDIO_BASE_URL=http://localhost:1234
 
 # ------------------------------------------------------------------------------
-# SUPABASE (OPTIONAL - for chat history persistence)
+# SUPABASE (REQUIRED FOR PRODUCTION)
 # ------------------------------------------------------------------------------
 # App's own Supabase for user data, chat history, etc.
+# Only needed when NEXT_PUBLIC_APP_MODE=production
 # Get these from: https://supabase.com → Project Settings → API
 
+# Your Supabase project URL
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+
+# Supabase anonymous (public) key
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
+# Supabase service role key (KEEP SECRET - never expose client-side)
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# ------------------------------------------------------------------------------
+# ENTERPRISE FEATURES (OPTIONAL)
+# ------------------------------------------------------------------------------
+# Set to 'true' to enable enterprise contact options (banner, sidebar button, etc.)
+NEXT_PUBLIC_ENTERPRISE=false
 
 # ------------------------------------------------------------------------------
 # ANALYTICS (OPTIONAL)
 # ------------------------------------------------------------------------------
 # PostHog for analytics and feature flags
+# Get these from: https://posthog.com
 NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key
 NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
+
+# ------------------------------------------------------------------------------
+# EXAMPLE CONFIGURATIONS
+# ------------------------------------------------------------------------------
+
+# Development Mode (Easy Setup - No Auth):
+# NEXT_PUBLIC_APP_MODE=development
+# VALYU_API_KEY=valyu_xxx
+# DAYTONA_API_KEY=xxx
+# OPENAI_API_KEY=sk-xxx (optional, for fallback)
+# OLLAMA_BASE_URL=http://localhost:11434 (optional)
+
+# Production Mode (Full Setup - Valyu OAuth):
+# NEXT_PUBLIC_APP_MODE=production
+# NEXT_PUBLIC_APP_URL=https://yourdomain.com
+#
+# Valyu OAuth (4 variables - no anon key needed):
+# NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co  # for /auth/v1/oauth/*
+# NEXT_PUBLIC_VALYU_CLIENT_ID=your-oauth-client-id
+# VALYU_CLIENT_SECRET=your-oauth-client-secret
+# VALYU_APP_URL=https://platform.valyu.ai  # for /api/oauth/*
+#
+# Optional fallback:
+# VALYU_API_KEY=valyu_xxx
+#
+# Other required:
+# OPENAI_API_KEY=sk-xxx
+# DAYTONA_API_KEY=xxx
+# NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co  # App's own Supabase
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
+# SUPABASE_SERVICE_ROLE_KEY=xxx
