feat: Implement core chat, data analysis, and reporting features with new API routes, UI components, and local database schema.

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # ------------------------------------------------------------------------------
 # Set to 'development' or 'production'
 # development = no auth, local SQLite, unlimited queries, Ollama/LM Studio support
-# production = full auth, Supabase, billing via Valyu credits
+# production = full auth, browser cache, billing via Valyu credits
 NEXT_PUBLIC_APP_MODE=development
 
 # Your app URL (use http://localhost:3000 for local development)
@@ -22,16 +22,12 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Sign in with Valyu - OAuth 2.1 credentials
 # Get your OAuth credentials at: https://platform.valyu.ai → Settings → OAuth Apps
 #
-# Only 4 environment variables are needed for Valyu OAuth:
-# 1. NEXT_PUBLIC_VALYU_SUPABASE_URL - for OAuth endpoints (/auth/v1/oauth/*)
-# 2. NEXT_PUBLIC_VALYU_CLIENT_ID - OAuth client identifier
-# 3. VALYU_CLIENT_SECRET - OAuth client secret (server-side only)
-# 4. VALYU_APP_URL - for platform endpoints (/api/oauth/*)
+# Only 3 environment variables are needed for Valyu OAuth:
+# 1. NEXT_PUBLIC_VALYU_CLIENT_ID - OAuth client identifier
+# 2. VALYU_CLIENT_SECRET - OAuth client secret (server-side only)
+# 3. VALYU_APP_URL - for platform endpoints (/api/oauth/*)
 #
 # NOTE: No anon key is needed - OAuth uses client_id/client_secret
-
-# Valyu Platform's Supabase URL (for OAuth endpoints: /auth/v1/oauth/authorize, /auth/v1/oauth/token)
-NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co
 
 # Valyu Platform URL (for platform endpoints: /api/oauth/userinfo, /api/oauth/proxy)
 VALYU_APP_URL=https://platform.valyu.ai
@@ -88,22 +84,6 @@ OLLAMA_BASE_URL=http://localhost:11434
 LMSTUDIO_BASE_URL=http://localhost:1234
 
 # ------------------------------------------------------------------------------
-# SUPABASE (REQUIRED FOR PRODUCTION)
-# ------------------------------------------------------------------------------
-# App's own Supabase for user data, chat history, etc.
-# Only needed when NEXT_PUBLIC_APP_MODE=production
-# Get these from: https://supabase.com → Project Settings → API
-
-# Your Supabase project URL
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-
-# Supabase anonymous (public) key
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
-# Supabase service role key (KEEP SECRET - never expose client-side)
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
-
-# ------------------------------------------------------------------------------
 # ENTERPRISE FEATURES (OPTIONAL)
 # ------------------------------------------------------------------------------
 # Set to 'true' to enable enterprise contact options (banner, sidebar button, etc.)
@@ -132,8 +112,7 @@ NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
 # NEXT_PUBLIC_APP_MODE=production
 # NEXT_PUBLIC_APP_URL=https://yourdomain.com
 #
-# Valyu OAuth (4 variables - no anon key needed):
-# NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co  # for /auth/v1/oauth/*
+# Valyu OAuth (3 variables):
 # NEXT_PUBLIC_VALYU_CLIENT_ID=your-oauth-client-id
 # VALYU_CLIENT_SECRET=your-oauth-client-secret
 # VALYU_APP_URL=https://platform.valyu.ai  # for /api/oauth/*
@@ -144,6 +123,3 @@ NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
 # Other required:
 # OPENAI_API_KEY=sk-xxx
 # DAYTONA_API_KEY=xxx
-# NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co  # App's own Supabase
-# NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
-# SUPABASE_SERVICE_ROLE_KEY=xxx
