--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
-    "framework": "nextjs",
-    "buildCommand": "npm run build",
-    "outputDirectory": ".next",
-    "regions": [
-        "iad1"
-    ],
-    "functions": {
-        "src/app/api/**/*.ts": {
-            "maxDuration": 300
-        }
-    }
+    "framework": "nextjs"
 }
